Fixed bug footer overlap with content

--- a/client/views/layouts/master.less
+++ b/client/views/layouts/master.less
@@ -5,8 +5,6 @@ html {
   min-height: 100%;
 }
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
 }
 #footer {
   position: absolute;
@@ -14,4 +12,7 @@ body {
   width: 100%;
   /* Set the fixed height of the footer here */
   background-color: @gray-lighter;
+}
+#main {
+  margin-bottom: 60px;
 }
